# MeidoChan

./: .deepsource.toml  .gitignore  README.md  pyproject.toml
src/meido/: __init__.py  application.py  base_service.py  basemodel.py  config.py  manager.py  ratelimiter.py
src/meido/builtins/: dispatcher.py  executor.py  reloader.py
src/meido/dependence/: aiobrowser.py  aiobrowser.pyi  database.py  database.pyi  mtproto.py  mtproto.pyi  redis.py  redisdb.py
src/meido/handler/: adminhandler.py  callbackqueryhandler.py  limiterhandler.py
src/meido/plugin/: __init__.py  _funcs.py  _handler.py  _job.py  _plugin.py
src/meido/plugin/methods/: __init__.py  application.py  delete_message.py  download_resource.py  get_args.py  get_chat.py  migrate_data.py
src/meido/services/cookies/: __init__.py  cache.py  models.py  repositories.py  services.py
src/meido/services/devices/: __init__.py  models.py  repositories.py  services.py
src/meido/services/players/: models.py  repositories.py  services.py
src/meido/services/task/: models.py  repositories.py  services.py
src/meido/services/template/: cache.py  models.py  services.py
src/meido/services/users/: cache.py  models.py  repositories.py  services.py
src/meido/utils/: aioredis.py  helpers.py  queues.py  uid.py
src/meido/utils/const/: __init__.py  _path.py
src/meido/utils/log/: __init__.py  _config.py  _ctime.pyi  _handler.py  _io.py  _logger.py  _parsers.py  _traceback.py
src/meido/utils/log/log_file/: __init__.py  _ctime.py  _datetime.py  _file.py  _path.py  (+4 more)
src/meido/utils/typedefs/: __init__.py
