[project]
name = "MeidoChan"
version = "0.0.1"
description = "A Telegram bot framework written in python."
authors = [
    { name = "Karako", email = "karakohear@gmail.com" },
]
dependencies = [
    "python-telegram-bot[ext]>=20.7",
    "httpx>=0.25.2",
    "ujson>=5.9.0",
    "rich>=13.7.0",
    "pytz>=2023.3.post1",
    "regex>=2023.12.25",
    "playwright==1.39.0",
    "arko-wrapper>=0.2.8",
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.25.0",
    "psutil>=5.9.7",
    "aiofiles>=23.2.1",
    "Jinja2>=3.1.2",
    "sqlmodel>=0.0.14",
    "pydantic<2.0.0,>=1.10.13",
    "redis>=5.0.1",
    "fakeredis>=2.20.1",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["meido", "pyproject.toml", "README.md", "LICENSE"]

[tool.pdm]
package-type = "library"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'